--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="kl">#5e503e</color>
     <color name="kl1">#cdc8c2</color>
     <color name="rosewood">#69095E</color>
+    <color name="notWork">#686E52</color>
 
     <color name="noColor">#0069095E</color>
 <!--    9E4244-->
