--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -151,24 +151,18 @@
                         android:layout_margin="10dp"
                         android:orientation="horizontal">
 
-                        <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center_vertical"-->
-                        <!--android:text="@string/password"-->
-                        <!--android:layout_weight="0"-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textSize="18sp" />-->
 
                         <EditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
                             android:layout_weight="1"
+                            android:inputType="textPassword"
                             android:background="@drawable/bac_search"
-                            android:gravity="center"
                             android:hint="@string/password"
                             android:padding="10dp"
+                            android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textSize="12sp" />
 
